expanded to include pedestrians as subject of incident and added query params to report controller
